noinst_bin_PROGRAMS = lockfree_fifo lockfree_hash_map lockfree_hash_set
noinst_bindir = $(top_builddir)/benchmarks

lockfree_fifo_SOURCES = lockfree_fifo.cc
lockfree_fifo_LDFLAGS = -lpthread
lockfree_hash_map_SOURCES = lockfree_hash_map.cc
lockfree_hash_map_LDFLAGS = -lpthread
lockfree_hash_set_SOURCES = lockfree_hash_set.cc
lockfree_hash_set_LDFLAGS = -lpthread
