CPPFLAGS = -I$(abs_top_srcdir)/include
noinst_PROGRAMS = lockfree_fifo lockfree_hash_map lockfree_hash_set locking_iterable_fifo

lockfree_fifo_SOURCES = lockfree_fifo.cc
lockfree_fifo_LDFLAGS = -lpthread
lockfree_hash_map_SOURCES = lockfree_hash_map.cc
lockfree_hash_map_LDFLAGS = -lpthread
lockfree_hash_set_SOURCES = lockfree_hash_set.cc
lockfree_hash_set_LDFLAGS = -lpthread
locking_iterable_fifo_SOURCES = locking_iterable_fifo.cc
locking_iterable_fifo_LDFLAGS = -lpthread
