nobase_include_HEADERS = e/bitfield.h e/bitsteal.h e/buffer.h e/bufferio.h \
						 e/convert.h e/envconfig.h \
						 e/guard.h e/hazard_ptrs.h e/intrusive_ptr.h \
						 e/lockfree_fifo.h e/lockfree_hash_map.h \
						 e/lockfree_hash_set.h e/locking_fifo.h \
						 e/locking_iterable_fifo.h e/profiler.h \
						 e/slice.h e/striped_lock.h e/timer.h \
						 e/tuple_compare.h e/worker_barrier.h
