AM_CXXFLAGS = $(PO6_CFLAGS)

nobase_include_HEADERS = e/atomic.h e/bitfield.h e/bitsteal.h e/buffer.h \
						 e/bufferio.h e/convert.h e/endian.h e/envconfig.h \
						 e/guard.h e/hazard_ptrs.h e/intrusive_ptr.h \
						 e/lockfree_fifo.h e/lockfree_hash_map.h \
						 e/lockfree_hash_set.h e/locking_fifo.h \
						 e/locking_iterable_fifo.h \
						 e/nonblocking_bounded_fifo.h e/pow2.h e/profiler.h \
						 e/safe_math.h e/slice.h e/striped_lock.h e/timer.h \
						 e/tuple_compare.h e/worker_barrier.h
